--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>This is Robert. I'm hosted with GitHub Pagesm with Helen, Alex and my bro John.</p>
+ <p>This is Robert. I'm hosted with GitHub Pages. I am here at Family Dog with Helen, Alex and my bro John. I am drinking beer. Others are drinking cocoa with rainbow sprinkles</p>
 </body>
 </html>
