Loading PVC picture

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 <H3>Horse Barn</H3>
 <A HREF=https://dl.dropbox.com/u/13677596/Barn_Manual/barnmanual.htm>Barn Manual</A><p>
 <H3>Links to courses</H3>
-<A HREF=https//www.dropbox.com/gallery/13677596/2/AVS401/PVCPictures?h=7d70b4>AVS 401-LInk to PVC Horse Pictures</A><P>
+<A HREF=https://www.dropbox.com/sh/sine9aukp9kk4zi/AAClYlmtcRYzO_ET-1ET-ekra?dl=0>Link to PVC Horse Pictures</A><P>
+<A HREF=https://www.dropbox.com/sh/28vi8xqtdax4xte/AABPANYZYlNNUGjjEtkfU1BNa?dl=0>Link to horse skeleton</A><P>
 <A HREF=https://dl.dropbox.com/u/13677596/AVS249/lablec1.htm>Laboratory and Companion Animal Science -  AVS 249</A><p>
 <A HREF=https://dl.dropbox.com/u/13677596/AVS353/repro.htm>Equine Reproduction and Breeding Management -  AVS 353</A><p>
 <A HREF=https://dl.dropbox.com/u/13677596/AVS393/stblec1.htm>Training the Standardbred Horse -  AVS 393</A><p>
