--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 <A HREF=https://sem.umaine.edu/training/course/1/slideshow/view>Online basic safety training</A><P>
 <A HREF=https://sem.umaine.edu/training/course/11/slideshow/view>Farm Safety training home page</A><P>
 <blockquote>
-<A HREF=https://www2.umaine.edu/SEM/Documents/MiscTrainingAndGuides/FARM%20SAFETY%20TRAINING.pdf>Farm safety manual</A><P>
+<A HREF=https://sem.umaine.edu/training/assets/slideshow/11/files/FARM%20SAFETY%20TRAINING.pdf>Farm safety manual</A><P>
 </blockquote>
 <H3>My contact information</H3>
 <i>Instructor:</i> Robert C. Causey DVM, PhD, MRCVS, Dip ACT<br>
-<i>Phone:</i> 207-581-2782<br>
+<i>Phone:</i> 207-922-7475<br>
 <i>Email:</i> Robert.Causey@umit.maine.edu<br>
 <i>Office:</i> Witter Center. Office visits by appointment.<br>
 <i>Mailing Address:</i> 344 Hitchner Hall, Animal and Veterinary Sciences, University of Maine, Orono, ME 04469-5735<br>
