--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE HTML PUBLIC"-//W3C//DTD HTML 3.2 Final//EN">
 <HTML>
 <HEAD>
-<TITLE>Lecture 1</TITLE>
+<TITLE>Robert's home page</TITLE>
 </HEAD>
 <BODY bgcolor=white>
-<H1><CENTER>Robert Causey home page</CENTER></H1>
+<H1><CENTER>Robert Causey's home page</CENTER></H1>
 <P>
 <H3>Resources for advisees</H3>
+<blockquote>
 <A HREF=https://dl.dropbox.com/u/13677596/advising/causeyschedule.pdf>Schedule for meetings</A><p>
 <p>
 <A HREF=https://dl.dropbox.com/u/13677596/advising/AVS396.pdf>AVS 396 Approval Form</A><p>
@@ -15,28 +16,38 @@
 <A HREF=https://peportal.maine.edu/psp/PAPRD89_1/EMPLOYEE/CSPRDST/c/UM_SA.UM_TRNSFER_GUEST.GBL?PORTALPARAM_PTCNAV=UM_TRNFR_COURSE_CREDIT&EOPP.SCNode=EMPL&EOPP.SCPortal=EMPLOYEE&EOPP.SCName=ADMN_UM_CLASS_SRCH_QCKLINLS&EOPP.SCLabel=&EOPP.SCPTcname=PT_PTPP_SCFNAV_BASEPAGE_SCR&FolderPath=PORTAL_ROOT_OBJECT.PORTAL_BASE_DATA.CO_NAVIGATION_COLLECTIONS.ADMN_UM_CLASS_SRCH_QCKLINLS.ADMN_S201006251223589127540583&IsFolder=false>Transfer equivalency tool to search for classes at other institutions which can be transferred to UMaine or <I>vice versa</I></A><P>
 <A HREF=https://peportal.maine.edu/psp/PAPRD89/EMPLOYEE/EMPL/h/?tab=PAPP_GUEST>Mainstreet</A><P>
 <A HREF=https://www.aavmc.org/vmcas/vmcas.htm>VMCAS</A><P>
+</blockquote>
 <H3>Horse Barn</H3>
+<blockquote>
 <A HREF=https://dl.dropbox.com/u/13677596/Barn_Manual/barnmanual.htm>Barn Manual</A><p>
-<H3>Links to courses</H3>
+</blockquote>
+<H3>Senior Topics</H3>
+<blockquote>
 <A HREF=https://www.dropbox.com/sh/sine9aukp9kk4zi/AAClYlmtcRYzO_ET-1ET-ekra?dl=0>Link to PVC Horse Pictures</A><P>
 <A HREF=https://www.dropbox.com/sh/28vi8xqtdax4xte/AABPANYZYlNNUGjjEtkfU1BNa?dl=0>Link to horse skeleton</A><P>
+<A HREF=https://dl.dropboxusercontent.com/u/13677596/SeM%20ELISA/semelisachecklist.htm>SeM ELISA protocol</A>
+</blockquote>
+<H3>Links to courses</H3>
+<blockquote>
 <A HREF=https://dl.dropbox.com/u/13677596/AVS249/lablec1.htm>Laboratory and Companion Animal Science -  AVS 249</A><p>
 <A HREF=https://dl.dropbox.com/u/13677596/AVS353/repro.htm>Equine Reproduction and Breeding Management -  AVS 353</A><p>
 <A HREF=https://dl.dropbox.com/u/13677596/AVS393/stblec1.htm>Training the Standardbred Horse -  AVS 393</A><p>
+</blockquote>
 <H3>Safety Links</H3>
+<blockquote>
 <A HREF=https://sem.umaine.edu/training/course/1/slideshow/view>Online basic safety training</A><P>
 <A HREF=https://sem.umaine.edu/training/course/11/slideshow/view>Farm Safety training home page</A><P>
-<blockquote>
 <A HREF=https://sem.umaine.edu/training/assets/slideshow/11/files/FARM%20SAFETY%20TRAINING.pdf>Farm safety manual</A><P>
 </blockquote>
 <H3>My contact information</H3>
+<blockquote>
 <i>Instructor:</i> Robert C. Causey DVM, PhD, MRCVS, Dip ACT<br>
 <i>Phone:</i> 207-922-7475<br>
 <i>Email:</i> Robert.Causey@umit.maine.edu<br>
 <i>Office:</i> Witter Center. Office visits by appointment.<br>
 <i>Mailing Address:</i> 344 Hitchner Hall, Animal and Veterinary Sciences, University of Maine, Orono, ME 04469-5735<br>
  <I>Mail box location:</i> 108 Hitchner Hall<P>
-
+</blockquote>
 </BODY>
 </HTML>
 
