--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <BODY bgcolor=white>
 <H1><CENTER>Robert Causey's home page</CENTER></H1>
 <P>
-<I>Updated Monday 18 January 2016</I>
+<div align="right"><I>Updated Monday 18 January 2016</I></div>
 <H3>Resources for advisees</H3>
 <blockquote>
 <A HREF=https://dl.dropbox.com/u/13677596/advising/causeyschedule.pdf>Schedule for meetings</A><p>
