upload of SeM PCR

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 <blockquote>
 <A HREF=https://www.dropbox.com/sh/sine9aukp9kk4zi/AAClYlmtcRYzO_ET-1ET-ekra?dl=0>Link to PVC Horse Pictures</A><P>
 <A HREF=https://www.dropbox.com/sh/28vi8xqtdax4xte/AABPANYZYlNNUGjjEtkfU1BNa?dl=0>Link to horse skeleton</A><P>
-<A HREF=https://dl.dropboxusercontent.com/u/13677596/SeM%20ELISA/semelisachecklist.htm>SeM ELISA protocol</A>
+<A HREF=https://dl.dropboxusercontent.com/u/13677596/SeM%20ELISA/semelisachecklist.htm>SeM ELISA protocol</A><P>
+<A HREF=https://dl.dropboxusercontent.com/u/13677596/SEM%20PCR/PCRprotocol/semPCRchecklist.htm>Draft SeM PCR protocol</A>
 </blockquote>
 <H3>Links to courses</H3>
 <blockquote>
