--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <BODY bgcolor=white>
 <H1><CENTER>Robert Causey's home page</CENTER></H1>
 <P>
-<div align="right"><I>Updated Monday 18 January 2016</I></div>
+<div align="right"><I>Updated Monday 28 August 2017</I></div>
 <H3>Resources for advisees</H3>
 <blockquote>
 <A HREF=https://dl.dropbox.com/u/13677596/advising/causeyschedule.pdf>Schedule for meetings</A><p>
@@ -37,15 +37,13 @@
 </blockquote>
 <H3>Safety Links</H3>
 <blockquote>
-<A HREF=https://sem.umaine.edu/training/course/1/slideshow/view>Online basic safety training</A><P>
-<A HREF=https://sem.umaine.edu/training/course/11/slideshow/view>Farm Safety training home page</A><P>
-<A HREF=https://sem.umaine.edu/training/assets/slideshow/11/files/FARM%20SAFETY%20TRAINING.pdf>Farm safety manual</A><P>
+<A HREF=https://sem.umaine.edu/safety-training/>On-Line Safety Training home page</A><P>
 </blockquote>
 <H3>My contact information</H3>
 <blockquote>
 <i>Instructor:</i> Robert C. Causey DVM, PhD, MRCVS, Dip ACT<br>
 <i>Phone:</i> 207-922-7475<br>
-<i>Email:</i> Robert.Causey@umit.maine.edu<br>
+<i>Email:</i> rcausey@maine.edu<br>
 <i>Office:</i> Witter Center. Office visits by appointment.<br>
 <i>Mailing Address:</i> 344 Hitchner Hall, Animal and Veterinary Sciences, University of Maine, Orono, ME 04469-5735<br>
  <I>Mail box location:</i> 108 Hitchner Hall<P>
