--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <H3>Links to courses</H3>
 <blockquote>
 <A HREF=https://dl.dropbox.com/u/13677596/AVS249/lablec1.htm>Laboratory and Companion Animal Science -  AVS 249</A><p>
-<A HREF=https://dl.dropbox.com/u/13677596/AVS353/repro.htm>Equine Reproduction and Breeding Management -  AVS 353</A><p>
+<A HREF=REPRO.HTM>Equine Reproduction and Breeding Management -  AVS 353</A><p>
 <A HREF=https://www.dropbox.com/s/1t9mfwqgbzk0sjk/hr101.pdf?dl=0>Training the Standardbred Horse -  AVS 393</A><p>
 </blockquote>
 <H3>Safety Links</H3>
