--- a/REPRO.HTM
+++ b/REPRO.HTM
@@ -72,42 +72,42 @@ For support services on campus: Office of Sexual Assault & Violence Prevention: 
 </P>
 <P>Review Quizzes</P>
 </B><P><Blockquote>A set of simple questions to test your knowledge of <A HREF=equest.HTM>basic horse reproduction</A>.</P>
-Quiz 1.  Detailed quiz of <A HREF=quiz1.HTM>anatomy, seasonality, and estrous cycle.</A>  <P>
-Quiz 2.  Detailed quiz of <A HREF=quiz2.HTM>endocrinology of pregnancy.</A>  <P>
-Quiz 3.  Detailed quiz of <A HREF=quiz3.HTM>management of pregnancy and foaling.</A>  <P>
-Quiz 4.  Detailed quiz of <A HREF=quiz4.HTM>stallion anatomy and physiology.</A>  <P> 
-Quiz 5.  Detailed quiz of <A HREF=quiz5.HTM>drug use in equine reproduction.</A>  <P>
+Quiz 1.  Detailed quiz of <A HREF=quiz1.htm>anatomy, seasonality, and estrous cycle.</A>  <P>
+Quiz 2.  Detailed quiz of <A HREF=quiz2.htm>endocrinology of pregnancy.</A>  <P>
+Quiz 3.  Detailed quiz of <A HREF=quiz3.htm>management of pregnancy and foaling.</A>  <P>
+Quiz 4.  Detailed quiz of <A HREF=quiz4.htm>stallion anatomy and physiology.</A>  <P> 
+Quiz 5.  Detailed quiz of <A HREF=quiz5.htm>drug use in equine reproduction.</A>  <P>
 </Blockquote>
  
  <P><B>Review of Mammalian Reproduction</B></P>
 </B><P><Blockquote>A description in simple terms of the basic events of reproduction in mammals<P><A HREF=baserep.HTM>click here for notes</A></Blockquote>
  
 <P><B>Reproductive Anatomy of the Mare</B></P>
-</B><P><Blockquote>A description of the arrangement of the reproductive organs of the mare, including ovaries, uterus, external genitalia, and nervous tissue. <P><A HREF=repanat.HTM>click here for notes</A></Blockquote>
+</B><P><Blockquote>A description of the arrangement of the reproductive organs of the mare, including ovaries, uterus, external genitalia, and nervous tissue. <P><A HREF=repanat.htm>click here for notes</A></Blockquote>
 <B>
 <P>Reproductive Seasonality of the Mare</P>
-</B><P><Blockquote>A description of reproductive seasonality, behavior, and basic endocrinology of the non cycling mare.</P><A HREF=repseas.HTM>click here for notes</A></Blockquote>
+</B><P><Blockquote>A description of reproductive seasonality, behavior, and basic endocrinology of the non cycling mare.</P><A HREF=repseas.htm>click here for notes</A></Blockquote>
  
 <P><B>Estrous Cycle of the Mare</P>
-</B><P><Blockquote>A description of follicular dynamics and hormonal events of the estrous cycle in the mare.</P><A HREF=estrous.HTM>click here for notes</A></Blockquote>
+</B><P><Blockquote>A description of follicular dynamics and hormonal events of the estrous cycle in the mare.</P><A HREF=estrous.htm>click here for notes</A></Blockquote>
  
 <B><P>Endocrinology of the Pregnant Mare</P>
-</B><P><Blockquote>Physiology early middle and late gestation. </P><A HREF=preg.HTM>click here for notes</A></Blockquote>
+</B><P><Blockquote>Physiology early middle and late gestation. </P><A HREF=preg.htm>click here for notes</A></Blockquote>
  
 <B><P>Pregnancy and Foaling</P>
-</B><P><Blockquote>The events surrounding foaling and the foal's adjustment to the world.</P><A HREF=pregfol.HTM>Click here</A> and<A HREF=foaling.HTM>here</A> for notes</A></Blockquote>
+</B><P><Blockquote>The events surrounding foaling and the foal's adjustment to the world.</P><A HREF=pregfol.htm>Click here</A> and<A HREF=foaling.htm>here</A> for notes</A></Blockquote>
  
 <B>
 <P>The Stallion</P></B>
 <Blockquote>Reproductive anatomy, physiology and breeding soundness evaluation of the stallion<P>
-<A HREF=stud.HTM>click here for notes</A></Blockquote>
+<A HREF=stud.htm>click here for notes</A></Blockquote>
 <B><P>Drug Use in Equine Reproduction</P>
 </B><P><Blockquote>The rationale behind various pharmacologic agents used in equine reproduction</P>
-<A HREF=drugs.HTM>click here for notes</A></Blockquote>
+<A HREF=drugs.htm>click here for notes</A></Blockquote>
  
 <B><P>Assisted equine reproduction and breeding management</P>
 </B><P><Blockquote>A description of techniques of assisted equine reproduction (artificial insemination, semen freezing, and embryo transfer) and some basic breeding management guidelines</P>
-<A HREF=assbred.HTM>click here for notes</A></Blockquote>
+<A HREF=assbred.htm>click here for notes</A></Blockquote>
  
  
  
