--- a/REPRO.HTM
+++ b/REPRO.HTM
@@ -71,7 +71,7 @@ For support services on campus: Office of Sexual Assault & Violence Prevention: 
 <h3><center>Syllabus</center></h3></P>
 </P>
 <P>Review Quizzes</P>
-</B><P><Blockquote>A set of simple questions to test your knowledge of <A HREF=equest.HTM>basic horse reproduction</A>.</P>
+</B><P><Blockquote>A set of simple questions to test your knowledge of <A HREF=equest.htm>basic horse reproduction</A>.</P>
 Quiz 1.  Detailed quiz of <A HREF=quiz1.htm>anatomy, seasonality, and estrous cycle.</A>  <P>
 Quiz 2.  Detailed quiz of <A HREF=quiz2.htm>endocrinology of pregnancy.</A>  <P>
 Quiz 3.  Detailed quiz of <A HREF=quiz3.htm>management of pregnancy and foaling.</A>  <P>
@@ -80,7 +80,7 @@ Quiz 5.  Detailed quiz of <A HREF=quiz5.htm>drug use in equine reproduction.</A>
 </Blockquote>
  
  <P><B>Review of Mammalian Reproduction</B></P>
-</B><P><Blockquote>A description in simple terms of the basic events of reproduction in mammals<P><A HREF=baserep.HTM>click here for notes</A></Blockquote>
+</B><P><Blockquote>A description in simple terms of the basic events of reproduction in mammals<P><A HREF=baserep.htm>click here for notes</A></Blockquote>
  
 <P><B>Reproductive Anatomy of the Mare</B></P>
 </B><P><Blockquote>A description of the arrangement of the reproductive organs of the mare, including ovaries, uterus, external genitalia, and nervous tissue. <P><A HREF=repanat.htm>click here for notes</A></Blockquote>
