--- a/REPRO.HTM
+++ b/REPRO.HTM
@@ -71,7 +71,7 @@ For support services on campus: Office of Sexual Assault & Violence Prevention: 
 <h3><center>Syllabus</center></h3></P>
 </P>
 <P>Review Quizzes</P>
-</B><P><Blockquote>A set of simple questions to test your knowledge of <A HREF=equest.htm>basic horse reproduction</A>.</P>
+</B><P><Blockquote>A set of simple questions to test your knowledge of <A HREF=EQUEST.HTM>basic horse reproduction</A>.</P>
 Quiz 1.  Detailed quiz of <A HREF=quiz1.htm>anatomy, seasonality, and estrous cycle.</A>  <P>
 Quiz 2.  Detailed quiz of <A HREF=quiz2.htm>endocrinology of pregnancy.</A>  <P>
 Quiz 3.  Detailed quiz of <A HREF=quiz3.htm>management of pregnancy and foaling.</A>  <P>
