--- a/stblec1.htm
+++ b/stblec1.htm
@@ -36,7 +36,7 @@ On a 100 point scale, A=90-100, B=80-89, C=70-79, D=60-69.<BR>
 <BR>
 <B>Pedigree Project</B><BR>
 Students will be given a list of eligible stallions and the pedigrees of registered Standardbred mares, owned by the University, that are suitable prospects for breeding. Students will then select the best stallion for each mare and give reasons for their choice. <P>
-<B><A href=reading.htm>Lecture Schedule and Reading Assignments</B></A><BR>
+<B><A href=READING.HTM>Lecture Schedule and Reading Assignments</B></A><BR>
 Reading assignments will be from the USTA's Care and Training of the Trotter and Pacer, handouts, and websites.  <P>
 <B>Hands - on experience</B><BR>
 This is primarily a lecture class. Opportunities for hands-on driving experience take place in the spring / summer with Valerie Grondin, the trainer of our race horses. However,  there may be an opportunity for some driving experience during this class.
