update to Spartacus

--- a/Bolshoi/spartacus.html
+++ b/Bolshoi/spartacus.html
@@ -5,8 +5,11 @@
 
 <BODY bgcolor=white>
 
-<H1><CENTER>Links to Bolshoi Sparctacus performance in 1984</CENTER></H1>
+<H1><CENTER>Links to Bolshoi Spartacus performance in 1984</CENTER></H1>
 <P>
+ 
+ <A HREF=https://www.bolshoi.ru/en/performances/47/libretto/>Spartacus libretto</A><P>
+ 
  
 <A HREF=https://www.youtube.com/watch?v=v0VACj3bKCU>Part 1</A><P>
 
@@ -31,5 +34,6 @@
 
 <A HREF=https://www.youtube.com/watch?v=G2scyVgQuAA>Part 8</A><P>
 
+Another version of the Adagio of <A HREF=https://www.youtube.com/watch?v=gVX0BoXc_Jk >Spartacus and Phrygia</A><P>
 </BODY>
 </HTML>
