Uploading updated webpage and assignments

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 <H1><CENTER>Robert Causey's home page</CENTER></H1>
 <P>
 <div align="right"><I>Updated Wednesday 29th April 2020</I></div>
+<center>
+<H2> Link to Assignments List </H2>
+		<A HREF= Assignments_Spring2020.html> Covid-19/Spring 2020 Assignments needed to complete my courses</A>
+</center>
 <H3>Resources for advisees</H3>
 <blockquote>
 <p>
