--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 <i>Instructor:</i> Robert C. Causey DVM, PhD, MRCVS, Dip ACT<br>
 <i>Phone:</i> 207-922-7475<br>
 <i>Email:</i> rcausey@maine.edu<br>
-<i>Office:</i> Witter Center. Office visits by appointment.<br>
-<i>Mailing Address:</i> 344 Hitchner Hall, Animal and Veterinary Sciences, University of Maine, Orono, ME 04469-5735<br>
+<i>Office:</i> Witter Center/Rogers Hall- Office visits by appointment.<br>
+<i>Mailing Address:</i> 207 Rogers Hall, School of Food and Agriculture, University of Maine, Orono, ME 04469-5735<br>
  <I>Mail box location:</i> 108 Hitchner Hall<P>
 </blockquote>
 </BODY>
