Final Edits to day at races part deux

--- a/AVS393/at_the_races/20201005_race_prog.htm
+++ b/AVS393/at_the_races/20201005_race_prog.htm
@@ -4,7 +4,7 @@
 <TITLE>AVS 393 - A Day at the races 2020-10-07</TITLE>
 </HEAD>
 <BODY bgcolor=white>
- <P ALIGN=CENTER><FONT SIZE=4><B>A day at the Races<br>Estimating Performance of a Race Horse<BR><BR></B></FONT>
+ <P ALIGN=CENTER><FONT SIZE=4><B>AVS393 - A day at the Races<br>Estimating Performance of a Race Horse<BR><BR></B></FONT>
 <B><I>Please note: this exercise is not intended to encourage you to bet. It is intended for you to learn how performance of a racehorse is recorded, and how the betting process works. This knowledge is valuable if you wish to be professionally involved in the racing industry, perhaps as a veterinarian, farrier, trainer, groom, judge, regulator, racing secretary, etc, or involved in racing data management.<p></I></B><P> 
 Please follow this link if you would like to know more about gambling addiction. I am not qualified to discuss it from a clinical perspective, but you should be aware that the problem exists.<p>
 <A HREF=http://www.mayoclinic.org/diseases-conditions/compulsive-gambling/symptoms-causes/syc-20355178>Link to gambling addiction information</A><p>
@@ -13,7 +13,7 @@ Below is a link to the Bangor Raceway program for last Wednesday's races (2020-1
 <b>Assignment</b><P>
 Please estimate the first, second, and third horse in each race based on information in the programs. I suggest you study all the race programs first, write down your predictions, and then fill out the form.<p> 
 <A HREF=https://forms.gle/MFv32SYLnDMNurFE9><B>Click here to record your estimates of first, second, and third for each race</B></A><p>
-And here is the link to videos of all the races:<p>
+After you have made your predictions look to see how you did. Here is the link to videos of all the races:<p>
 <A HREF=https://www.hollywoodcasinobangor.com/racing/watch-live-races-replays> Link to race replays</A><p>
 The videos will show the results of the race and what each horse would pay for a $2 bet.<p>
 If you can't be bothered to watch the videos you can also see race results if you follow these links....<p>
@@ -21,7 +21,7 @@ If you can't be bothered to watch the videos you can also see race results if yo
 FYI: here is a place to get free programs for other races around the country.<p><A HREF=https://www.trackmaster.com/usta>Free race programs</A>
 <p>
 <b>Optional Assignment</b><p>
-Assume you placed $2 for your first place horse to win, how much money will you have made or lost at the end of the day? <p>
+Assume you placed $2 for your first place horse to win, how much money will you have made or lost at the end of the day? You can just email me your response.<p>
 </BODY>
 </HTML>
 
