--- a/AVS146/To_Do_List_AVS146.htm
+++ b/AVS146/To_Do_List_AVS146.htm
@@ -8,21 +8,24 @@
 This page contains all the assignments associated with each lab of this class, along with links to the resources (lab videos or printed handouts) necessary. The assignments consist of a short quiz. If you have questions please do not hesitate to reach out to me by text at 207-922-7475 or email at rcausey@maine.edu<p>
 
 <B><U>Area Specific Training</U></B><br>
-Link to videos: <A HREF=https://youtu.be/6IP_SqWNTn8> Video 1</A>   &nbsp; &nbsp;     <A HREF=https://video.maine.edu/media/Area+Specific+Training/1_oltfvd7r>Video 2</A> <br> 
-These videos are for review purposes only. You need to take area specific training in person.<P>
+Link to video: <A HREF=https://video.maine.edu/media/Area+Specific+Training/1_oltfvd7r>AST Video </A> <br> 
+This videos is for review purposes only. It is good information but you need to take area specific training in person. <br>There is no assignment with this video<P>
+<U><B>Trip to farm</B></U><br>
+The introductory walk to the farm and tour of the animals<A HREF=XXX> </A><br>
+There is no assignment for this lab.<p>
 <B><U>Dairy Cows</U></B><br>
 Link to videos: <A HREF=https://video.maine.edu/media/AVS+146+Lab+2+Part+1/1_herd7kkb>Dairy Cow Video 1</A>   &nbsp; &nbsp;     <A HREF=https://video.maine.edu/media/AVS+Lab+2+Part+2/1_0nxl2s0u>Dairy Cow Video 2</A> <br> 
 Link to printed material: <A HREF=http:\\robertcausey.github.io\AVS146\dairy_cows.pdf>Dairy Cow Handout</A><br>
-<B>Link to dairy cow quiz: <A HREF=http:XXX>Dairy Cow Quiz</A></B><p>
+<B>Link to quiz: <A HREF=https://forms.gle/KRR3Y8DkXB3nMavN6>Dairy Cow Quiz</A></B><p>
 <B><U>Pigs</U></B><br>
 Link to videos: <A HREF=https://youtu.be/G0KQTjW3GKc>Pigs Video 1</A><br> 
 Link to printed material: <A HREF=http:\\robertcausey.github.io\AVS146\pigs.pdf>Pigs Handout</A><br>
-<B>Link to pig quiz: <A HREF=xxxc>Pigs Quiz</A></B><p>
+<B>Link to quiz: <A HREF=xxxc>Pigs Quiz</A></B><p>
 
 <B><U>Horses</U></B><br>
-Link to videos: <A HREF=http:XXX>Horse Video 1</A>   &nbsp; &nbsp;     <A HREF=http:XXX>Horse Video 2</A> &nbsp; &nbsp; <A HREF=http:XXX>Horse Video 3</A><br> 
+Link to videos: <A HREF=http:XXX>Coming soon!</A><!--   &nbsp; &nbsp;     <A HREF=http:XXX>Horse Video 2</A> &nbsp; &nbsp; <A HREF=http:XXX>Horse Video 3</A>--><br> 
 Link to printed material: <A HREF=http:XXX>HorseHandout</A><br>
-<B>Link to horse quiz: <A HREF=http:XXX>Horse Quiz</A></B><p>
+<B>Link to quiz: <A HREF=http:XXX>Horse Quiz</A></B><p>
 
 </BODY>
 </HTML>
