--- a/AVS146/To_Do_List_AVS146.htm
+++ b/AVS146/To_Do_List_AVS146.htm
@@ -11,7 +11,7 @@ This page contains all the assignments associated with each lab of this class, a
 Link to video: <A HREF=https://video.maine.edu/media/Area+Specific+Training/1_oltfvd7r>AST Video </A> <br> 
 This videos is for review purposes only. It is good information but you need to take area specific training in person. <br>There is no assignment with this video<P>
 <U><B>Trip to farm</B></U><br>
-The introductory walk to the farm and tour of the animals<A HREF=XXX> </A><br>
+The introductory walk to the farm and tour of the animals &nbsp; &nbsp;<A HREF=https://video.maine.edu/media/AVS+146+Lab+1/1_fol1m62m>Video of walk to farm </A><br>
 There is no assignment for this lab.<p>
 <B><U>Dairy Cows</U></B><br>
 Link to videos: <A HREF=https://video.maine.edu/media/AVS+146+Lab+2+Part+1/1_herd7kkb>Dairy Cow Video 1</A>   &nbsp; &nbsp;     <A HREF=https://video.maine.edu/media/AVS+Lab+2+Part+2/1_0nxl2s0u>Dairy Cow Video 2</A> <br> 
@@ -20,10 +20,10 @@ Link to printed material: <A HREF=http:\\robertcausey.github.io\AVS146\dairy_cow
 <B><U>Pigs</U></B><br>
 Link to videos: <A HREF=https://youtu.be/G0KQTjW3GKc>Pigs Video 1</A><br> 
 Link to printed material: <A HREF=http:\\robertcausey.github.io\AVS146\pigs.pdf>Pigs Handout</A><br>
-<B>Link to quiz: <A HREF=xxxc>Pigs Quiz</A></B><p>
+<B>Link to quiz: <A HREF=xxxc>Coming soon!</A></B><p>
 
 <B><U>Horses</U></B><br>
-Link to videos: <A HREF=http:XXX>Coming soon!</A><!--   &nbsp; &nbsp;     <A HREF=http:XXX>Horse Video 2</A> &nbsp; &nbsp; <A HREF=http:XXX>Horse Video 3</A>--><br> 
+Link to videos: <A HREF=https://video.maine.edu/media/AVS303_0040-Grooming-1/1_0yf5nwwj>Grooming 1</A>  &nbsp; &nbsp;     <A HREF=https://video.maine.edu/media/AVS303_0041-Grooming-2/1_y52mer37>Grooming 2</A> <!--&nbsp; &nbsp; <A HREF=http:XXX>Horse Video 3</A>--><br> 
 Link to printed material: <A HREF=http:XXX>HorseHandout</A><br>
 <B>Link to quiz: <A HREF=http:XXX>Horse Quiz</A></B><p>
 
