AVS 146 Equine quiz really finished

--- a/AVS146/To_Do_List_AVS146.htm
+++ b/AVS146/To_Do_List_AVS146.htm
@@ -24,8 +24,8 @@ Link to printed material: <A HREF=http:\\robertcausey.github.io\AVS146\pigs.pdf>
 
 <B><U>Horses</U></B><br>
 Link to videos: <A HREF=https://video.maine.edu/media/AVS303_0040-Grooming-1/1_0yf5nwwj>Grooming 1</A>  &nbsp; &nbsp;     <A HREF=https://video.maine.edu/media/AVS303_0041-Grooming-2/1_y52mer37>Grooming 2</A> <!--&nbsp; &nbsp; <A HREF=http:XXX>Horse Video 3</A>--><br> 
-Link to printed material: <A HREF=http:XXX>HorseHandout</A><br>
-<B>Link to quiz: <A HREF=http:XXX>Horse Quiz</A></B><p>
+Link to printed material: <A HREF=http:\\robertcausey.github.io\AVS146\20201012_Horselab_AVS146.pdf >HorseHandout</A><br>
+<B>Link to quiz: <A HREF=https://forms.gle/JpXEKvV88ipLM1vi9>Horse Quiz</A></B><p>
 
 </BODY>
 </HTML>
