--- a/AVS146/To_Do_List_AVS146.htm
+++ b/AVS146/To_Do_List_AVS146.htm
@@ -2,9 +2,19 @@
 <HTML>
 <HEAD>
 <TITLE>To Do List for AVS 146</TITLE>
+<style>
+h1 { font-size:35px;}
+body {
+color:black;	  font-size:25px;
+}
+a {
+	  color: DarkMagenta;
+}
+</style>
+</head>
 </HEAD>
-<BODY bgcolor=white>
- <P ALIGN=CENTER><B>To Do List for AVS 146<BR><BR></B></FONT>
+<BODY bgcolor=GainsBoro>
+	<H1><P ALIGN=CENTER><B>To Do List for AVS 146<BR><BR></B></H1>
 This page contains all the assignments associated with each lab of this class, along with links to the resources (lab videos or printed handouts) necessary. The assignments consist of a short quiz. If you have questions please do not hesitate to reach out to me by text at 207-922-7475 or email at rcausey@maine.edu<p>
 
 <B><U>Area Specific Training</U></B><br>
@@ -16,23 +26,23 @@ There is no assignment for this lab.<p>
 <B><U>Dairy Cows</U></B><br>
 Link to videos: <A HREF=https://video.maine.edu/media/AVS+146+Lab+2+Part+1/1_herd7kkb>Dairy Cow Video 1</A>   &nbsp; &nbsp;     <A HREF=https://video.maine.edu/media/AVS+Lab+2+Part+2/1_0nxl2s0u>Dairy Cow Video 2</A> <br> 
 Link to printed material: <A HREF=http:\\robertcausey.github.io\AVS146\dairy_cows.pdf>Dairy Cow Handout</A><br>
-<B>Link to quiz: <A HREF=https://forms.gle/KRR3Y8DkXB3nMavN6>Dairy Cow Quiz</A></B><p>
+Link to quiz: <A HREF=https://forms.gle/KRR3Y8DkXB3nMavN6>Dairy Cow Quiz</A><p>
 <B><U>Pigs</U></B><br>
 Link to videos: <A HREF=https://youtu.be/G0KQTjW3GKc>Pigs Video 1</A><br> 
 Link to printed material: <A HREF=http:\\robertcausey.github.io\AVS146\pigs.pdf>Pigs Handout</A><br>
-<B>Link to quiz: <A HREF=xxxc>Coming soon!</A></B><p>
+Link to quiz: <A HREF=xxxc>Coming soon!</A><p>
 
 <B><U>Horses</U></B><br>
 Link to videos: <A HREF=https://video.maine.edu/media/AVS303_0040-Grooming-1/1_0yf5nwwj>Grooming 1</A>  &nbsp; &nbsp;     <A HREF=https://video.maine.edu/media/AVS303_0041-Grooming-2/1_y52mer37>Grooming 2</A> <!--&nbsp; &nbsp; <A HREF=http:XXX>Horse Video 3</A>--><br> 
 Link to printed material: <A HREF=http:\\robertcausey.github.io\AVS146\20201012_Horselab_AVS146.pdf >HorseHandout</A><br>
-<B>Link to quiz: <A HREF=https://forms.gle/JpXEKvV88ipLM1vi9>Horse Quiz</A></B><p>
+Link to quiz: <A HREF=https://forms.gle/JpXEKvV88ipLM1vi9>Horse Quiz</A><p>
 
 </BODY>
 </HTML>
 <!--<B><U>Sheep</U></B><br>
 Link to videos: <A HREF=http:XXX>Sheep Video 1</A>   &nbsp; &nbsp;     <A HREF=http:XXX>Sheep Video 2</A> &nbsp; &nbsp; <A HREF=http:XXX>Sheep Video 3</A><br> 
 Link to printed material: <A HREF=http:XXX>Sheep Handout</A><br>
-<B>Link to sheep quiz: <A HREF=http:XXX>Sheep Quiz</A></B><p>-->
+Link to sheep quiz: <A HREF=http:XXX>Sheep Quiz</A><p>-->
 
 
 
