--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 <BODY bgcolor=white>
 <H1><CENTER>Robert Causey's home page</CENTER></H1>
 <P>
-<div align="right"><I>Updated Thursday 30th April 2020</I></div>
+<div align="right"><I>Updated Monday 12th October 2020</I></div>
 <center>
-<H2> Link to Assignments List </H2>
-		<A HREF= Assignments_Spring2020.html> Covid-19/Spring 2020 Assignments needed to complete my courses</A>
+<H2> Link to Assignments List for AVS 146 </H2>
+		<A HREF= http://robertcausey.github.io/AVS146/To_Do_List_AVS146.htm> Assignments needed to complete AVS146</A>
 </center>
 <H3>Resources for advisees</H3>
 <blockquote>
