--- a/AVS146/To_Do_List_AVS146.htm
+++ b/AVS146/To_Do_List_AVS146.htm
@@ -15,7 +15,7 @@ a {
 </HEAD>
 <BODY bgcolor=GainsBoro>
 	<H1><P ALIGN=CENTER><B>To Do List for AVS 146<BR><BR></B></H1>
-This page contains all the assignments associated with each lab of this class, along with links to the resources (lab videos or printed handouts) necessary. The assignments consist of a short quiz. If you have questions please do not hesitate to reach out to me by text at 207-922-7475 or email at rcausey@maine.edu<p>
+This page contains all the assignments associated with each lab of this class so far, along with links to the resources (lab videos or printed handouts) necessary. The assignments consist of a short quiz. If you have questions please do not hesitate to reach out to me by text at 207-922-7475 or email at rcausey@maine.edu. As additional labs are completed they will be added to this page.<p>
 
 <B><U>Area Specific Training</U></B><br>
 Link to video: <A HREF=https://video.maine.edu/media/Area+Specific+Training/1_oltfvd7r>AST Video </A> <br> 
