--- a/AVS146/To_Do_List_AVS146.htm
+++ b/AVS146/To_Do_List_AVS146.htm
@@ -25,25 +25,25 @@ The introductory walk to the farm and tour of the animals &nbsp; &nbsp;<A HREF=h
 There is no assignment for this lab.<p>
 <B><U>Dairy Cows</U></B><br>
 Link to videos: <A HREF=https://video.maine.edu/media/AVS+146+Lab+2+Part+1/1_herd7kkb>Dairy Cow Video 1</A>   &nbsp; &nbsp;     <A HREF=https://video.maine.edu/media/AVS+Lab+2+Part+2/1_0nxl2s0u>Dairy Cow Video 2</A> <br> 
-Link to printed material: <A HREF=http:\\robertcausey.github.io\AVS146\dairy_cows.pdf>Dairy Cow Handout</A><br>
+Link to printed material: <A HREF=http://robertcausey.github.io\AVS146\dairy_cows.pdf>Dairy Cow Handout</A><br>
 Link to quiz: <A HREF=https://forms.gle/KRR3Y8DkXB3nMavN6>Dairy Cow Quiz</A><p>
 <B><U>Pigs</U></B><br>
 Link to videos: <A HREF=https://youtu.be/G0KQTjW3GKc>Pigs Video 1</A><br> 
-Link to printed material: <A HREF=http:\\robertcausey.github.io\AVS146\pigs.pdf>Pigs Handout</A><br>
+Link to printed material: <A HREF=http://robertcausey.github.io/AVS146/pigs.pdf>Pigs Handout</A><br>
 Link to quiz: <A HREF=xxxc>Coming soon!</A><p>
 
 <B><U>Horses</U></B><br>
 Link to videos: <A HREF=https://video.maine.edu/media/AVS303_0040-Grooming-1/1_0yf5nwwj>Grooming 1</A>  &nbsp; &nbsp;     <A HREF=https://video.maine.edu/media/AVS303_0041-Grooming-2/1_y52mer37>Grooming 2</A> <!--&nbsp; &nbsp; <A HREF=http:XXX>Horse Video 3</A>--><br> 
-Link to printed material: <A HREF=http:\\robertcausey.github.io\AVS146\20201012_Horselab_AVS146.pdf >Horse Handout</A><br>
+Link to printed material: <A HREF=http://robertcausey.github.io/AVS146/20201012_Horselab_AVS146.pdf >Horse Handout</A><br>
 Link to quiz: <A HREF=https://forms.gle/JpXEKvV88ipLM1vi9>Horse Quiz</A><p>
+
+<B><U>Sheep</U></B><br>
+Link to videos: <A HREF=http:XXX>Sheep Video 1</A>   &nbsp; &nbsp;     <A HREF=http:XXX>Sheep Video 2</A> &nbsp; &nbsp; <A HREF=http:XXX>Sheep Video 3</A><br> 
+Link to printed material: <A HREF=http://robertcausey.github.io/AVS146/sheepdisease.pdf >Sheep Handout 1</A>  &nbsp; &nbsp; <A HREF=http://robertcausey.github.io/AVS146/small_rum_vet.pdf>Sheep Handout 2</A><br>
+Link to sheep quiz: <A HREF=http:XXX>Sheep Quiz</A><p>
 
 </BODY>
 </HTML>
-<!--<B><U>Sheep</U></B><br>
-Link to videos: <A HREF=http:XXX>Sheep Video 1</A>   &nbsp; &nbsp;     <A HREF=http:XXX>Sheep Video 2</A> &nbsp; &nbsp; <A HREF=http:XXX>Sheep Video 3</A><br> 
-Link to printed material: <A HREF=http:XXX>Sheep Handout</A><br>
-Link to sheep quiz: <A HREF=http:XXX>Sheep Quiz</A><p>-->
-
 
 
 
