finshed edits for now

--- a/AVS146/To_Do_List_AVS146.htm
+++ b/AVS146/To_Do_List_AVS146.htm
@@ -16,7 +16,7 @@ a {
 <BODY bgcolor=GainsBoro>
 	<H1><P ALIGN=CENTER><B>To Do List for AVS 146<BR><BR></B></H1>
 This page contains all the assignments associated with each lab of this class so far, along with links to the resources (lab videos or printed handouts) necessary. The assignments consist of a short quiz. If you have questions please do not hesitate to reach out to me by text at 207-922-7475 or email at rcausey@maine.edu. As additional labs are completed they will be added to this page.<p>
-I have put in due dates to motivate you to get them done. The dairy quiz is pretty long, but the rest are shorter.  I suggest doing them quickly while they are fresh in your mind. If you need an extension I will happily grant it if you ask me.
+I have put in due dates to motivate you to get them done. The dairy quiz is pretty long, but the rest are shorter.  I suggest doing them quickly while they are fresh in your mind. If you need an extension I will happily grant it if you ask me.<P>
 <B><U>Area Specific Training</U></B><br>
 Link to video: <A HREF=https://video.maine.edu/media/Area+Specific+Training/1_oltfvd7r>AST Video </A> <br> 
 This videos is for review purposes only. It is good information but you need to take area specific training in person. <br>There is no assignment with this video<P>
@@ -29,23 +29,23 @@ Link to printed material: <A HREF=http://robertcausey.github.io\AVS146\dairy_cow
 Link to quiz: <A HREF=https://forms.gle/KRR3Y8DkXB3nMavN6>Dairy Cow Quiz</A> Due October 21<p>
 <B><U>Pigs</U></B><br>
 Link to videos: <A HREF=https://youtu.be/G0KQTjW3GKc>Pigs Video 1</A><br> 
-Link to printed material: <A HREF=http://robertcausey.github.io/AVS146/pigs.pdf>Pigs Handout</A><br>
-Link to quiz: <A HREF=https://forms.gle/GGCAaMATsd3DWz6X7>Porcing quiz</A>Due October 28th<p>
+Link to printed material: <A HREF=http://robertcausey.github.io/AVS146/pigs.pdf> Pigs Handout</A><br>
+Link to quiz: <A HREF=https://forms.gle/GGCAaMATsd3DWz6X7>Porcine quiz</A> Due October 28th<p>
 
 <B><U>Horses</U></B><br>
-Link to videos: <A HREF=https://video.maine.edu/media/AVS303_0040-Grooming-1/1_0yf5nwwj>Grooming 1</A>  &nbsp; &nbsp;     <A HREF=https://video.maine.edu/media/AVS303_0041-Grooming-2/1_y52mer37>Grooming 2</A> &nbsp; &nbsp; <A HREF=https://video.maine.edu/media/AVS+146+Lab+4+Part+1/1_n1xn84x2>Horse ID, colr etc</A><br> 
+Link to videos: <A HREF=https://video.maine.edu/media/AVS303_0040-Grooming-1/1_0yf5nwwj>Grooming 1</A>  &nbsp; &nbsp;     <A HREF=https://video.maine.edu/media/AVS303_0041-Grooming-2/1_y52mer37>Grooming 2</A> &nbsp; &nbsp; <A HREF=https://video.maine.edu/media/AVS+146+Lab+4+Part+1/1_n1xn84x2>Horse ID, coat color etc</A><br> 
 Link to printed material: <A HREF=http://robertcausey.github.io/AVS146/20201012_Horselab_AVS146.pdf >Horse Handout</A><br>
 Link to quiz: <A HREF=https://forms.gle/JpXEKvV88ipLM1vi9>Horse Quiz</A> Due November 4th<p>
 
 <B><U>Sheep</U></B><br>
-Link to videos: <?--<A HREF=http:XXX>Sheep Video 1</A>   &nbsp; &nbsp;     <A HREF=http:XXX>Sheep Video 2</A> &nbsp; &nbsp; <A HREF=http:XXX>Sheep Video 3</A> -->Coming soon!<br> 
+Link to videos: <!--<A HREF=http:XXX>Sheep Video 1</A>   &nbsp; &nbsp;     <A HREF=http:XXX>Sheep Video 2</A> &nbsp; &nbsp; <A HREF=http:XXX>Sheep Video 3</A> -->Coming soon!<br> 
 Link to printed material: <A HREF=http://robertcausey.github.io/AVS146/sheepdisease.pdf >Sheep Handout 1</A>  &nbsp; &nbsp; <A HREF=http://robertcausey.github.io/AVS146/small_rum_vet.pdf>Sheep Handout 2</A><br>
-Link to sheep quiz: <A HREF=https://forms.gle/ppwQARw9STQUryy48>Sheep Quiz</A>Due November 11th<p>
+Link to sheep quiz: <A HREF=https://forms.gle/ppwQARw9STQUryy48>Sheep Quiz</A> Due November 11th<p>
 
 <B><U>Beef</U></B><br>
 Link to videos: <A HREF=https://youtu.be/OZZqI4WqbZo>Beef-branding</A> <br> 
-Link to printed material: There is no printed material for this lab, except for the hides with "UMO"'s branded on them.<br>
-Link to Beef-branding quiz: <A HREF=https://forms.gle/gotzPNWn4MjVz1BMA>Beef-branding quiz</A>Due November 18th <p>
+Link to printed material: There is no printed material for this lab (except for the hides with UMO branded on them).<br>
+Link to Beef-branding quiz: <A HREF=https://forms.gle/gotzPNWn4MjVz1BMA>Beef-branding quiz</A> Due November 18th <p>
 </BODY>
 </HTML>
 
