added note about perfect score on quizzes

--- a/AVS146/To_Do_List_AVS146.htm
+++ b/AVS146/To_Do_List_AVS146.htm
@@ -16,10 +16,10 @@ a {
 <BODY bgcolor=GainsBoro>
 	<H1><P ALIGN=CENTER><B>To Do List for AVS 146<BR><BR></B></H1>
 This page contains all the assignments associated with each lab of this class so far, along with links to the resources (lab videos or printed handouts) necessary. The assignments consist of a short quiz. If you have questions please do not hesitate to reach out to me by text at 207-922-7475 or email at rcausey@maine.edu. As additional labs are completed they will be added to this page.<p>
-I have put in due dates to motivate you to get them done. The dairy quiz is pretty long, but the rest are shorter.  I suggest doing them quickly while they are fresh in your mind. If you need an extension I will happily grant it if you ask me.<P>
+I have put in due dates to motivate you to get them done. The dairy quiz is pretty long, but the rest are shorter.  I suggest doing them quickly while they are fresh in your mind. If you need an extension I will happily grant it if you ask me. You may repeat each quiz until you get a perfect score.<P>
 <B><U>Area Specific Training</U></B><br>
 Link to video: <A HREF=https://video.maine.edu/media/Area+Specific+Training/1_oltfvd7r>AST Video </A> <br> 
-This videos is for review purposes only. It is good information but you need to take area specific training in person. <br>There is no assignment with this video<P>
+This video is for review purposes only. It is good information but you need to take area specific training in person. <br>There is no assignment with this video<P>
 <U><B>Trip to farm</B></U><br>
 The introductory walk to the farm and tour of the animals &nbsp; &nbsp;<A HREF=https://video.maine.edu/media/AVS+146+Lab+1/1_fol1m62m>Video of walk to farm </A><br>
 There is no assignment for this lab.<p>
