--- a/AVS146/To_Do_List_AVS146.htm
+++ b/AVS146/To_Do_List_AVS146.htm
@@ -33,12 +33,12 @@ Link to printed material: <A HREF=http://robertcausey.github.io/AVS146/pigs.pdf>
 Link to quiz: <A HREF=https://forms.gle/GGCAaMATsd3DWz6X7>Porcine quiz</A> Due October 28th<p>
 
 <B><U>Horses</U></B><br>
-Link to videos: <A HREF=https://video.maine.edu/media/AVS303_0040-Grooming-1/1_0yf5nwwj>Grooming 1</A>  &nbsp; &nbsp;     <A HREF=https://video.maine.edu/media/AVS303_0041-Grooming-2/1_y52mer37>Grooming 2</A> &nbsp; &nbsp; <A HREF=https://video.maine.edu/media/AVS+146+Lab+4+Part+1/1_n1xn84x2>Horse ID, coat color etc</A><br> 
+Link to videos: <A HREF=https://video.maine.edu/media/AVS303_0040-Grooming-1/1_0yf5nwwj>Grooming 1</A>  &nbsp; &nbsp;     <A HREF=https://video.maine.edu/media/AVS303_0041-Grooming-2/1_y52mer37>Grooming 2</A> &nbsp; &nbsp; <A HREF=https://video.maine.edu/media/AVS+146+Lab+4+Part+1/1_n1xn84x2>Horse ID, coat color etc</A> &nbsp; &nbsp; <A HREF=https://youtu.be/qGJCbU0Ao04>Horse ID, coat color, aging part 2</A><br> 
 Link to printed material: <A HREF=http://robertcausey.github.io/AVS146/20201012_Horselab_AVS146.pdf >Horse Handout</A><br>
 Link to quiz: <A HREF=https://forms.gle/JpXEKvV88ipLM1vi9>Horse Quiz</A> Due November 4th<p>
 
 <B><U>Sheep</U></B><br>
-Link to videos: <!--<A HREF=http:XXX>Sheep Video 1</A>   &nbsp; &nbsp;     <A HREF=http:XXX>Sheep Video 2</A> &nbsp; &nbsp; <A HREF=http:XXX>Sheep Video 3</A> -->Coming soon!<br> 
+Link to videos: <A HREF=https://youtu.be/x5ksCkudo_c>Sheep Video 1</A>   &nbsp; &nbsp;     <A HREF=https://youtu.be/L-nCxXxOLg8>Sheep Video 2</A><br> 
 Link to printed material: <A HREF=http://robertcausey.github.io/AVS146/sheepdisease.pdf >Sheep Handout 1</A>  &nbsp; &nbsp; <A HREF=http://robertcausey.github.io/AVS146/small_rum_vet.pdf>Sheep Handout 2</A><br>
 Link to sheep quiz: <A HREF=https://forms.gle/ppwQARw9STQUryy48>Sheep Quiz</A> Due November 11th<p>
 
