edits to 196_303_AVS.htm

--- a/196_303_AVS.htm
+++ b/196_303_AVS.htm
@@ -25,7 +25,7 @@ Robert </p>
 <B>Labs:</B><P>
 The four labs below are only required by students taking the class renotely. Students attending labs at Witter are not required to take complete these 4 online lab assignments, but may complete these as an optional exercise for review of the material. 
 <blockquote>
-	<A HREF=horse_handling.htm> AVS 303 Lab 1 </A>- <B>Horse Handling </B> <P>
+	<A HREF=https://robertcausey.github.io/horse_handling.htm> AVS 303 Lab 1 </A>- <B>Horse Handling </B> <P>
 <A HREF= https://forms.gle/wZxWE9Swn5WGF9Mb7 > AVS 303 Lab 2 </A> <B> - Longeing and gaits </B><P>
 <A HREF= https://forms.gle/AemahfixDEarJmza7> AVS 303 Lab 3</A> - <B>Lameness Observation and examination</B><P>
 	<A HREF= https://forms.gle/uAk5xu48BZyDiStA7> AVS 303 Lab 4 </A> - <B>Bandage Bloopers</B>
