edits to 196_303_AVS.htm

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 </blockquote>
 <H3>Links to courses</H3>
 <blockquote>
+<A HREF=https://robertcausey.github.io/196_303_AVS.htm>AVS 196 - Introduction to Equine Management Cooperative</A><br>and <br> 
+<A HREF=https://robertcausey.github.io/196_303_AVS.htm>AVS 303 - Equine Management Cooperative</A><p>
 <A HREF=REPRO.HTM>Equine Reproduction and Breeding Management -  AVS 353</A><p>
 <A HREF=stblec1.htm>Training the Standardbred Horse -  AVS 393</A><p>
 </blockquote>
