--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <BODY bgcolor=white>
 <H1><CENTER>Robert Causey's home page</CENTER></H1>
 <P>
-<div align="right"><I>Updated Monday 12th October 2020</I></div>
+<div align="right"><I>Updated Thursday 19th November 2020</I></div>
 <center>
 <H2> Link to Assignments List for AVS 146 </H2>
 		<A HREF= http://robertcausey.github.io/AVS146/To_Do_List_AVS146.htm> Assignments needed to complete AVS146</A>
@@ -31,10 +31,12 @@
 </blockquote>
 <H3>Links to courses</H3>
 <blockquote>
+<A HREF= http://robertcausey.github.io/AVS146/To_Do_List_AVS146.htm>AVS 146 - Introduction to Animal Science Laboratory</A><p>
 <A HREF=https://robertcausey.github.io/196_303_AVS.htm>AVS 196 - Introduction to Equine Management Cooperative</A><p> 
 <A HREF=https://robertcausey.github.io/196_303_AVS.htm>AVS 303 - Equine Management Cooperative</A><p>
-<A HREF=REPRO.HTM>Equine Reproduction and Breeding Management -  AVS 353</A><p>
-<A HREF=stblec1.htm>Training the Standardbred Horse -  AVS 393</A><p>
+<A HREF=REPRO.HTM>AVS 353 - Equine Reproduction and Breeding Management</A><p>
+<A HREF=stblec1.htm>AVS 393 - Training the Standardbred Horse</A><p>
+<A HREF=397_AVS.htm>AVS 397 - Equine Intership</A><p>
 </blockquote>
 <H3>Safety Links</H3>
 <blockquote>
