edits to horse handling

--- a/horse_handling.htm
+++ b/horse_handling.htm
@@ -2,21 +2,33 @@
 <html lang="en">
 	<head>
 		<title>Horse Handling Videos</title>
+		<style>                                                                  h2{ font-size:30px;}                                                    body {                                                                   color:black;      font-size:20px;                                        }                                                                        a {                                                                                color: DarkMagenta;                                            }                                                                        </style> 
 	</head>
 <body>
-	<H3>Horse Handling when taking care of the horses at the Witter Center </H3>	
-	This is a list of the basic horse handling videos. We require some form of head protection when moving horses between paddocks and stalls, such as a construction type helmet or riding helmet. On the ground we do not require a chin strap to be fastened so long as the helmet fits snugly. However, when riding, an ASTM approved riding helmet must be worn, and the chin strap secured.<p>  
-<A HREF=https://youtu.be/0Q7gv835_9g>01-Basic Horse Handling</A><p> 
-<A HREF=https://youtu.be/dHq_lBVBdjQ>02-Bring in and chain </A><p>
-<A HREF=https://youtu.be/PGnMgJvrXoo>03-Lead rope</A><p>
-<A HREF=https://youtu.be/PmsCFAptJzA>04-Through the gate out</A><p>
-<A HREF=https://youtu.be/Pqd5SNNor3k>05-Through the gate in </A><p>
-<A HREF=https://youtu.be/m7SOX-gOZ9c>06-Walking, and pigeon curtain</A><p>
-<A HREF=https://youtu.be/rKuMQHcbipc>07-Through the stall door </A><p>
-<A HREF=https://youtu.be/NAfOzOuu_yw>08-Into the stall - leading around</A><p>
-<A HREF=https://youtu.be/rR7sb1pw4ao>09-Halter off</A><p>
-<A HREF=https://youtu.be/yLnCgLTDV2Q>10-In for the night </A><p>
-<A HREF=https://youtu.be/8qqTq7lgVns>11-Halter on and going out</A><p>
-<A HREF=https://youtu.be/6bcoO-cbu8Q>12-Release</A><p>
+<H2>Horse Handling when taking care of the horses at the Witter Center </H2>	
+This is a list of links to some basic horse handling videos. We require some form of head protection when moving horses between paddocks and stalls, such as a construction type helmet or riding helmet. On the ground we do not require a chin strap to be fastened so long as the helmet fits snugly. However, when riding, an ASTM approved riding helmet must be worn, and the chin strap secured.<p>  
+After each video I have made a comment about a key point in the video, but there are other points which I have not mentioned.
+<blockquote>
+	<H3><A HREF=https://youtu.be/0Q7gv835_9g>01-Basic Horse Handling - Intro</A> </H3><p> 
+Things go better if you have a clear procedure for how to bring horse between stalls and paddocks<p>
+<H3><A HREF=https://youtu.be/dHq_lBVBdjQ>02-Bring in and chain </A></H3><p>
+The chain goes in the left side cheek piece, up, over the nose band, then clips to the right side, with the thumb latch to the outside.<p> 
+<H3><A HREF=https://youtu.be/PGnMgJvrXoo>03-Lead rope</A></H3><p>
+Never wrap the lead rope around any part of your body, not even loosely.<p>
+<H3><A HREF=https://youtu.be/PmsCFAptJzA>04-Through the gate out</A></H3><p>
+Make sure the gate is more than wide enough for her to get through, and that she does not go out ahead of you. But don't open it wide until you are ready to go out.<p>
+<H3><A HREF=https://youtu.be/Pqd5SNNor3k>05-Through the gate in </A></H3><p>
+As for bring out, i.e. you go first, keep the gate wide, but also Make sure the gate is closed and secure before you let the horse free. Latch it if necessary.<p>
+<H3><A HREF=https://youtu.be/m7SOX-gOZ9c>06-Walking, and pigeon curtain</A></H3><p> You can walk briskly, but make sure she does not get in front of you.<p>
+<H3><A HREF=https://youtu.be/rKuMQHcbipc>07-Through the stall door </A></H3><p>Make sure the door is as wide as it can go, and lead her straight through it, not at an angle. <p>
+<H3><A HREF=https://youtu.be/NAfOzOuu_yw>08-Into the stall - leading around</A></H3><p>Stay ahead of the horse as you walk around the stall.<p>
+<H3><A HREF=https://youtu.be/rR7sb1pw4ao>09-Halter off</A></H3><p>
+Leave the door slightly open so you have an escape route.<p> 
+<H3><A HREF=https://youtu.be/yLnCgLTDV2Q>10-In for the night </A></H3><p>
+Hang halter on door neatly, with the chain attached to the botton ring of the halter.<p>
+<H3><A HREF=https://youtu.be/8qqTq7lgVns>11-Halter on and going out</A></H3><p>If the horse does not come to the stall door, go away. Don't go into the stall until she comes to the door.<p> 
+<H3><A HREF=https://youtu.be/6bcoO-cbu8Q>12-Release</A></H3><p>
+The halter stays on because it is a quick release halter. Back the horse into the paddock before releasing her.
+</blockquote>
 </body>
 </html>
